AnalizadorSintactico/y.output
Terminals unused in grammar

   import_chait


State 47 conflicts: 1 reduce/reduce
State 49 conflicts: 1 reduce/reduce


Grammar

    0 $accept: inicio $end

    1 inicio: Poner_Boina linea_logica_rec Sacar_Boina

    2 linea_logica_rec: linea_logica linea_logica_rec
    3                 | linea_logica

    4 linea_logica: statement_linea termino_linea
    5             | statement_condicional_ciclo

    6 statement_linea: def_var
    7                | muestra
    8                | operacion_matematica

    9 statement_condicional_ciclo: bloque_if
   10                            | bloque_for
   11                            | bloque_while

   12 def_var: VARIABLE '=' valor

   13 valor: NUMERO
   14      | TEXTO
   15      | VARIABLE
   16      | operacion_matematica

   17 operacion_matematica: termino
   18                     | termino '+' operacion_matematica
   19                     | termino '-' operacion_matematica

   20 termino: factor
   21        | factor '*' termino
   22        | factor '/' termino

   23 factor: '(' operacion_matematica ')'
   24       | factor_primario

   25 factor_primario: VARIABLE
   26                | NUMERO

   27 muestra: mostrar '(' unir ')'

   28 unir: definir '+' unir
   29     | definir

   30 definir: TEXTO
   31        | VARIABLE

   32 validacion: VARIABLE
   33           | NUMERO

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']'

   35 bloque_while: mientras_Chait '{' validacion '}' '(' linea_logica ')'

   36 bloque_for: por_cada_Bollo '{' validacion '}' '(' linea_logica ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 23 27 34 35 36
')' (41) 23 27 34 35 36
'*' (42) 21
'+' (43) 18 28
'-' (45) 19
'/' (47) 22
'=' (61) 12
'?' (63) 34
'[' (91) 34
']' (93) 34
'{' (123) 35 36
'}' (125) 35 36
'\302' (194) 34
error (256)
Poner_Boina (258) 1
mostrar (259) 27
si_Marcos (260) 34
mientras_Chait (261) 35
por_cada_Bollo (262) 36
import_chait (263)
Sacar_Boina (264) 1
contrario (265) 34
NUMERO (266) 13 26 33
TEXTO (267) 14 30
VARIABLE (268) 12 15 25 31 32
termino_linea (269) 4


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
inicio (29)
    on left: 1, on right: 0
linea_logica_rec (30)
    on left: 2 3, on right: 1 2
linea_logica (31)
    on left: 4 5, on right: 2 3 34 35 36
statement_linea (32)
    on left: 6 7 8, on right: 4
statement_condicional_ciclo (33)
    on left: 9 10 11, on right: 5
def_var (34)
    on left: 12, on right: 6
valor (35)
    on left: 13 14 15 16, on right: 12
operacion_matematica (36)
    on left: 17 18 19, on right: 8 16 18 19 23
termino (37)
    on left: 20 21 22, on right: 17 18 19 21 22
factor (38)
    on left: 23 24, on right: 20 21 22
factor_primario (39)
    on left: 25 26, on right: 24
muestra (40)
    on left: 27, on right: 7
unir (41)
    on left: 28 29, on right: 27 28
definir (42)
    on left: 30 31, on right: 28 29
validacion (43)
    on left: 32 33, on right: 34 35 36
bloque_if (44)
    on left: 34, on right: 9
bloque_while (45)
    on left: 35, on right: 11
bloque_for (46)
    on left: 36, on right: 10


state 0

    0 $accept: . inicio $end

    Poner_Boina  shift, and go to state 1

    inicio  go to state 2


state 1

    1 inicio: Poner_Boina . linea_logica_rec Sacar_Boina

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    linea_logica_rec             go to state 10
    linea_logica                 go to state 11
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 2

    0 $accept: inicio . $end

    $end  shift, and go to state 23


state 3

   27 muestra: mostrar . '(' unir ')'

    '('  shift, and go to state 24


state 4

   34 bloque_if: si_Marcos . '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']'

    '\302'  shift, and go to state 25


state 5

   35 bloque_while: mientras_Chait . '{' validacion '}' '(' linea_logica ')'

    '{'  shift, and go to state 26


state 6

   36 bloque_for: por_cada_Bollo . '{' validacion '}' '(' linea_logica ')'

    '{'  shift, and go to state 27


state 7

   26 factor_primario: NUMERO .

    $default  reduce using rule 26 (factor_primario)


state 8

   12 def_var: VARIABLE . '=' valor
   25 factor_primario: VARIABLE .

    '='  shift, and go to state 28

    $default  reduce using rule 25 (factor_primario)


state 9

   23 factor: '(' . operacion_matematica ')'

    NUMERO    shift, and go to state 7
    VARIABLE  shift, and go to state 29
    '('       shift, and go to state 9

    operacion_matematica  go to state 30
    termino               go to state 16
    factor                go to state 17
    factor_primario       go to state 18


state 10

    1 inicio: Poner_Boina linea_logica_rec . Sacar_Boina

    Sacar_Boina  shift, and go to state 31


state 11

    2 linea_logica_rec: linea_logica . linea_logica_rec
    3                 | linea_logica .

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    $default  reduce using rule 3 (linea_logica_rec)

    linea_logica_rec             go to state 32
    linea_logica                 go to state 11
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 12

    4 linea_logica: statement_linea . termino_linea

    termino_linea  shift, and go to state 33


state 13

    5 linea_logica: statement_condicional_ciclo .

    $default  reduce using rule 5 (linea_logica)


state 14

    6 statement_linea: def_var .

    $default  reduce using rule 6 (statement_linea)


state 15

    8 statement_linea: operacion_matematica .

    $default  reduce using rule 8 (statement_linea)


state 16

   17 operacion_matematica: termino .
   18                     | termino . '+' operacion_matematica
   19                     | termino . '-' operacion_matematica

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35

    $default  reduce using rule 17 (operacion_matematica)


state 17

   20 termino: factor .
   21        | factor . '*' termino
   22        | factor . '/' termino

    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 20 (termino)


state 18

   24 factor: factor_primario .

    $default  reduce using rule 24 (factor)


state 19

    7 statement_linea: muestra .

    $default  reduce using rule 7 (statement_linea)


state 20

    9 statement_condicional_ciclo: bloque_if .

    $default  reduce using rule 9 (statement_condicional_ciclo)


state 21

   11 statement_condicional_ciclo: bloque_while .

    $default  reduce using rule 11 (statement_condicional_ciclo)


state 22

   10 statement_condicional_ciclo: bloque_for .

    $default  reduce using rule 10 (statement_condicional_ciclo)


state 23

    0 $accept: inicio $end .

    $default  accept


state 24

   27 muestra: mostrar '(' . unir ')'

    TEXTO     shift, and go to state 38
    VARIABLE  shift, and go to state 39

    unir     go to state 40
    definir  go to state 41


state 25

   34 bloque_if: si_Marcos '\302' . validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']'

    NUMERO    shift, and go to state 42
    VARIABLE  shift, and go to state 43

    validacion  go to state 44


state 26

   35 bloque_while: mientras_Chait '{' . validacion '}' '(' linea_logica ')'

    NUMERO    shift, and go to state 42
    VARIABLE  shift, and go to state 43

    validacion  go to state 45


state 27

   36 bloque_for: por_cada_Bollo '{' . validacion '}' '(' linea_logica ')'

    NUMERO    shift, and go to state 42
    VARIABLE  shift, and go to state 43

    validacion  go to state 46


state 28

   12 def_var: VARIABLE '=' . valor

    NUMERO    shift, and go to state 47
    TEXTO     shift, and go to state 48
    VARIABLE  shift, and go to state 49
    '('       shift, and go to state 9

    valor                 go to state 50
    operacion_matematica  go to state 51
    termino               go to state 16
    factor                go to state 17
    factor_primario       go to state 18


state 29

   25 factor_primario: VARIABLE .

    $default  reduce using rule 25 (factor_primario)


state 30

   23 factor: '(' operacion_matematica . ')'

    ')'  shift, and go to state 52


state 31

    1 inicio: Poner_Boina linea_logica_rec Sacar_Boina .

    $default  reduce using rule 1 (inicio)


state 32

    2 linea_logica_rec: linea_logica linea_logica_rec .

    $default  reduce using rule 2 (linea_logica_rec)


state 33

    4 linea_logica: statement_linea termino_linea .

    $default  reduce using rule 4 (linea_logica)


state 34

   18 operacion_matematica: termino '+' . operacion_matematica

    NUMERO    shift, and go to state 7
    VARIABLE  shift, and go to state 29
    '('       shift, and go to state 9

    operacion_matematica  go to state 53
    termino               go to state 16
    factor                go to state 17
    factor_primario       go to state 18


state 35

   19 operacion_matematica: termino '-' . operacion_matematica

    NUMERO    shift, and go to state 7
    VARIABLE  shift, and go to state 29
    '('       shift, and go to state 9

    operacion_matematica  go to state 54
    termino               go to state 16
    factor                go to state 17
    factor_primario       go to state 18


state 36

   21 termino: factor '*' . termino

    NUMERO    shift, and go to state 7
    VARIABLE  shift, and go to state 29
    '('       shift, and go to state 9

    termino          go to state 55
    factor           go to state 17
    factor_primario  go to state 18


state 37

   22 termino: factor '/' . termino

    NUMERO    shift, and go to state 7
    VARIABLE  shift, and go to state 29
    '('       shift, and go to state 9

    termino          go to state 56
    factor           go to state 17
    factor_primario  go to state 18


state 38

   30 definir: TEXTO .

    $default  reduce using rule 30 (definir)


state 39

   31 definir: VARIABLE .

    $default  reduce using rule 31 (definir)


state 40

   27 muestra: mostrar '(' unir . ')'

    ')'  shift, and go to state 57


state 41

   28 unir: definir . '+' unir
   29     | definir .

    '+'  shift, and go to state 58

    $default  reduce using rule 29 (unir)


state 42

   33 validacion: NUMERO .

    $default  reduce using rule 33 (validacion)


state 43

   32 validacion: VARIABLE .

    $default  reduce using rule 32 (validacion)


state 44

   34 bloque_if: si_Marcos '\302' validacion . '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']'

    '?'  shift, and go to state 59


state 45

   35 bloque_while: mientras_Chait '{' validacion . '}' '(' linea_logica ')'

    '}'  shift, and go to state 60


state 46

   36 bloque_for: por_cada_Bollo '{' validacion . '}' '(' linea_logica ')'

    '}'  shift, and go to state 61


state 47

   13 valor: NUMERO .
   26 factor_primario: NUMERO .

    termino_linea  reduce using rule 13 (valor)
    termino_linea  [reduce using rule 26 (factor_primario)]
    $default       reduce using rule 26 (factor_primario)


state 48

   14 valor: TEXTO .

    $default  reduce using rule 14 (valor)


state 49

   15 valor: VARIABLE .
   25 factor_primario: VARIABLE .

    termino_linea  reduce using rule 15 (valor)
    termino_linea  [reduce using rule 25 (factor_primario)]
    $default       reduce using rule 25 (factor_primario)


state 50

   12 def_var: VARIABLE '=' valor .

    $default  reduce using rule 12 (def_var)


state 51

   16 valor: operacion_matematica .

    $default  reduce using rule 16 (valor)


state 52

   23 factor: '(' operacion_matematica ')' .

    $default  reduce using rule 23 (factor)


state 53

   18 operacion_matematica: termino '+' operacion_matematica .

    $default  reduce using rule 18 (operacion_matematica)


state 54

   19 operacion_matematica: termino '-' operacion_matematica .

    $default  reduce using rule 19 (operacion_matematica)


state 55

   21 termino: factor '*' termino .

    $default  reduce using rule 21 (termino)


state 56

   22 termino: factor '/' termino .

    $default  reduce using rule 22 (termino)


state 57

   27 muestra: mostrar '(' unir ')' .

    $default  reduce using rule 27 (muestra)


state 58

   28 unir: definir '+' . unir

    TEXTO     shift, and go to state 38
    VARIABLE  shift, and go to state 39

    unir     go to state 62
    definir  go to state 41


state 59

   34 bloque_if: si_Marcos '\302' validacion '?' . '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']'

    '('  shift, and go to state 63


state 60

   35 bloque_while: mientras_Chait '{' validacion '}' . '(' linea_logica ')'

    '('  shift, and go to state 64


state 61

   36 bloque_for: por_cada_Bollo '{' validacion '}' . '(' linea_logica ')'

    '('  shift, and go to state 65


state 62

   28 unir: definir '+' unir .

    $default  reduce using rule 28 (unir)


state 63

   34 bloque_if: si_Marcos '\302' validacion '?' '(' . linea_logica ')' '[' contrario '(' linea_logica ')' ']'

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    linea_logica                 go to state 66
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 64

   35 bloque_while: mientras_Chait '{' validacion '}' '(' . linea_logica ')'

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    linea_logica                 go to state 67
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 65

   36 bloque_for: por_cada_Bollo '{' validacion '}' '(' . linea_logica ')'

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    linea_logica                 go to state 68
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 66

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica . ')' '[' contrario '(' linea_logica ')' ']'

    ')'  shift, and go to state 69


state 67

   35 bloque_while: mientras_Chait '{' validacion '}' '(' linea_logica . ')'

    ')'  shift, and go to state 70


state 68

   36 bloque_for: por_cada_Bollo '{' validacion '}' '(' linea_logica . ')'

    ')'  shift, and go to state 71


state 69

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' . '[' contrario '(' linea_logica ')' ']'

    '['  shift, and go to state 72


state 70

   35 bloque_while: mientras_Chait '{' validacion '}' '(' linea_logica ')' .

    $default  reduce using rule 35 (bloque_while)


state 71

   36 bloque_for: por_cada_Bollo '{' validacion '}' '(' linea_logica ')' .

    $default  reduce using rule 36 (bloque_for)


state 72

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' . contrario '(' linea_logica ')' ']'

    contrario  shift, and go to state 73


state 73

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario . '(' linea_logica ')' ']'

    '('  shift, and go to state 74


state 74

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' . linea_logica ')' ']'

    mostrar         shift, and go to state 3
    si_Marcos       shift, and go to state 4
    mientras_Chait  shift, and go to state 5
    por_cada_Bollo  shift, and go to state 6
    NUMERO          shift, and go to state 7
    VARIABLE        shift, and go to state 8
    '('             shift, and go to state 9

    linea_logica                 go to state 75
    statement_linea              go to state 12
    statement_condicional_ciclo  go to state 13
    def_var                      go to state 14
    operacion_matematica         go to state 15
    termino                      go to state 16
    factor                       go to state 17
    factor_primario              go to state 18
    muestra                      go to state 19
    bloque_if                    go to state 20
    bloque_while                 go to state 21
    bloque_for                   go to state 22


state 75

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica . ')' ']'

    ')'  shift, and go to state 76


state 76

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' . ']'

    ']'  shift, and go to state 77


state 77

   34 bloque_if: si_Marcos '\302' validacion '?' '(' linea_logica ')' '[' contrario '(' linea_logica ')' ']' .

    $default  reduce using rule 34 (bloque_if)
